Netica_API_504/src/Netica.h

typedef class Enviro environ_ns;
#define net_bn       Bnet
#define node_bn      Bnode
typedef struct environ_ins   environ_ns;
typedef struct net_ibn       net_bn;
typedef struct node_ibn      node_bn;
#define NULL 0
IMPORT (environ_ns*) NewNeticaEnviron_ns (const char* license, environ_ns* env, const char* locn);
IMPORT (int) InitNetica2_bn (environ_ns* env, char* mesg);
IMPORT (int) CloseNetica_bn (environ_ns* env, char* mesg);
IMPORT (net_bn*) NewNet_bn (const char* name, environ_ns* env);
IMPORT (void) DeleteNet_bn (net_bn* net);
IMPORT (node_bn*) NewNode_bn (const char* name, int num_states, net_bn* net);
IMPORT (void) SetNodeTitle_bn (node_bn* node, const char* title);
IMPORT (void) SetNodeStateNames_bn (node_bn* node, const char* state_names);
IMPORT (int) AddLink_bn (node_bn* parent, node_bn* child);
IMPORT (void) CompileNet_bn (net_bn* net);