Netica_API_504_Mac/src/NeticaEx.h

extern environ_ns* env;
void EnterFinding (char* node_name, char* state_name, net_bn* net);
double GetNodeBelief (char* node_name, char* state_name, net_bn* net);
void SetNodeProbs (node_bn* node, ...);